--- a/webapp/app/rankings/views/rankings.html
+++ b/webapp/app/rankings/views/rankings.html
@@ -67,6 +67,13 @@
         </div>
     </div>
     <div class="row">
+        <div class='col-md-4 col-sm-12'>
+            <input type='text' class='form-control mobile' placeholder='Search for Player' ng-model='query'/>
+        </div>
+        <div class='col-md-8'></div>
+    </div>
+    <br/>
+    <div class="row">
         <div class="col-md-12">
             <table class="table table-striped table-condensed">
                 <tr class="table_header">
@@ -74,7 +81,7 @@
                     <th>Name</th>
                     <th>Rating</th>
                 </tr>
-                <tr ng-repeat="line in rankingsService.rankingsList.ranking" class="table_line">
+                <tr ng-repeat="line in rankingsService.rankingsList.ranking | filter:query" class="table_line">
                     <td><b>{{line.rank}}</b></td>
                     <td><a href="#/{{regionService.region.id}}/players/{{line.id}}">{{line.name}}</a></td>
                     <td>{{line.rating | number:3}}</td>
