--- a/webapp/app/tournaments/views/tournaments.html
+++ b/webapp/app/tournaments/views/tournaments.html
@@ -7,6 +7,12 @@
             <h4 class="text-right"><button type="button" class="btn btn-danger mobile mobile_small_text" ng-click="open()">Upload a Tournament</button></h4>
         </div>
     </div>
+    <div class='row'>
+        <div class='col-md-4 col-sm-12'>
+            <input type='text' ng-model='query' placeholder='Search for Tournament' class='form-control mobile' />
+        </div>
+    </div>
+    <br/>
     <div class="row">
         <div class="col-md-12">
             <table class="table table-striped table-condensed">
@@ -16,7 +22,7 @@
                     <th>Name</th>
                     <th></th>
                 </tr>
-                <tr ng-repeat="tournament in tournamentService.tournamentList" class="tournament_line"
+                <tr ng-repeat="tournament in tournamentService.tournamentList | filter:query" class="tournament_line"
                     ng-class="{excluded: tournament.excluded == true}"
                     id="tournament_line_{{tournament.id}}">
                     <td ng-show="sessionService.isAdminForRegion(regionService.region.id)">
