Refactored activeTF flag to be is_active, for naming conventions

--- a/webapp/app/tools/admin_functions/views/admin_functions.html
+++ b/webapp/app/tools/admin_functions/views/admin_functions.html
@@ -36,10 +36,10 @@
                                 {{r.display_name}}
                             </td>
                             <td>
-                                {{r.activeTF}}
+                                {{r.is_active}}
                             </td>
                             <td>
-                                <form ng-submit='changeRegionActiveTF(r)'>
+                                <form ng-submit='changeRegionIsActive(r)'>
                                     <input type='submit' class='btn btn-success' value='change'>
                                 </form>
                             </td>
