--- a/webapp/app/rankings/views/rankings.html
+++ b/webapp/app/rankings/views/rankings.html
@@ -67,14 +67,13 @@
         </div>
     </div>
     <div class="row">
-        <div class='col-md-4 col-sm-12'>
+        <div class="col-md-6 col-sm-12">
+            <h3 style="color:grey; width: 60%">Player Rankings</h3>
+            <br/>
+        
             <input type='text' class='form-control mobile' placeholder='Search for Player' ng-model='query'/>
-        </div>
-        <div class='col-md-8'></div>
-    </div>
-    <br/>
-    <div class="row">
-        <div class="col-md-12">
+            
+            <br/>
             <table class="table table-striped table-condensed">
                 <tr class="table_header">
                     <th>Rank</th>
@@ -85,6 +84,22 @@
                     <td><b>{{line.rank}}</b></td>
                     <td><a href="#/{{regionService.region.id}}/players/{{line.id}}">{{line.name}}</a></td>
                     <td>{{line.rating | number:3}}</td>
+                </tr>
+            </table>
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <h3 style="color:grey">Tournaments in Ranking Period</h3>
+            <br/>
+            <input type='text' class='form-control mobile' placeholder='Search for Tournament' ng-model='tournamentquery'/>
+            <br/>
+            <table class="table table-striped table-condensed">
+                <tr class="table_header">
+                    <th>Date</th>
+                    <th>Name</th>
+                </tr>
+                <tr ng-repeat="tournament in rankingsService.rankingsTournaments | filter:tournamentquery" class="table_line">
+                    <td>{{tournament.date}}</td>
+                    <td><a href="#/{{regionService.region.id}}/tournaments/{{tournament.id}}">{{tournament.name}}</a></td>
                 </tr>
             </table>
         </div>
